# deskwork

./: .gitignore  Cargo.toml  README.md  deskwork-plugin-implementation-prompt.md
.github/workflows/: release.yml
deskwork-core/: Cargo.toml  build.rs
deskwork-core/src/: lib.rs  prompts.rs
deskwork-core/src/auth/: claude.rs  mod.rs  storage.rs
deskwork-core/src/claude/: mod.rs  model.rs
deskwork-core/src/config/: mod.rs  settings.rs
deskwork-core/src/db/: migrations.rs  mod.rs
deskwork-core/src/executor/: mod.rs
deskwork-core/src/external_tools/: catalog.rs  downloader.rs  env.rs  extractor.rs  manager.rs  manifest.rs  mod.rs  paths.rs  types.rs
deskwork-core/src/models/: config.rs  mod.rs  registry.rs  types.rs
deskwork-core/src/plugins/: bundled.rs  context_builder.rs  loader.rs  mcp_bridge.rs  mcp_manager.rs  mcp_tool.rs  mod.rs  registry.rs  runtime.rs  slash_commands.rs  types.rs
deskwork-core/src/python/: mod.rs
deskwork-core/src/skills/: categories.rs  category_context.rs  commands.rs  context.rs  discovery.rs  mod.rs  playbook.rs  types.rs
deskwork-core/src/tools/: common.rs  delete_file_tool.rs  diff.rs  edit_file_tool.rs  file_ops.rs  grep_tool.rs  list_files_tool.rs  mod.rs  read_file_tool.rs  registry.rs  shell_tool.rs
deskwork-gui/: Cargo.toml
deskwork-gui/fonts/: LICENSE.md
deskwork-gui/src/: app.rs  main.rs
deskwork-gui/src/ui/: attachments.rs  chat.rs  command_bar.rs  input.rs  markdown.rs  menu.rs  mod.rs  settings.rs  status.rs
knowledge-work-plugins/legal/: PLAYBOOK_TEMPLATE.md
