[workspace]
members = ["deskwork-core", "deskwork-gui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jan Feddersen"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"

# serdesAI (local paths)
serdes-ai = { path = "../serdesAI/serdes-ai" }
serdes-ai-agent = { path = "../serdesAI/serdes-ai-agent" }
serdes-ai-core = { path = "../serdesAI/serdes-ai-core" }
serdes-ai-models = { path = "../serdesAI/serdes-ai-models", features = ["anthropic", "claude-code-oauth"] }
serdes-ai-tools = { path = "../serdesAI/serdes-ai-tools" }
serdes-ai-streaming = { path = "../serdesAI/serdes-ai-streaming" }
serdes-ai-providers = { path = "../serdesAI/serdes-ai-providers" }

# GUI
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["syntect"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
webbrowser = "1.0"
reqwest = { version = "0.12", features = ["json"] }
