[workspace]
members = ["deskwork-core", "deskwork-gui"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Jan Feddersen"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"

# serdesAI (GitHub)
serdes-ai = { git = "https://github.com/janfeddersen-wq/serdesAI.git", branch = "main" }
serdes-ai-agent = { git = "https://github.com/janfeddersen-wq/serdesAI.git", branch = "main" }
serdes-ai-core = { git = "https://github.com/janfeddersen-wq/serdesAI.git", branch = "main" }
serdes-ai-models = { git = "https://github.com/janfeddersen-wq/serdesAI.git", branch = "main", features = ["anthropic", "claude-code-oauth"] }
serdes-ai-tools = { git = "https://github.com/janfeddersen-wq/serdesAI.git", branch = "main" }
serdes-ai-streaming = { git = "https://github.com/janfeddersen-wq/serdesAI.git", branch = "main" }
serdes-ai-providers = { git = "https://github.com/janfeddersen-wq/serdesAI.git", branch = "main" }
serdes-ai-mcp = { git = "https://github.com/janfeddersen-wq/serdesAI.git", branch = "main", features = ["reqwest"] }
serdes-ai-toolsets = { git = "https://github.com/janfeddersen-wq/serdesAI.git", branch = "main" }

# GUI
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["syntect"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
glob = "0.3"
webbrowser = "1.0"
reqwest = { version = "0.12", features = ["json"] }
