[package]
name = "deskwork-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for Deskwork - Claude-powered coding assistant"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
rusqlite.workspace = true
dirs.workspace = true
serdes-ai.workspace = true
serdes-ai-agent.workspace = true
serdes-ai-core.workspace = true
serdes-ai-models.workspace = true
serdes-ai-tools.workspace = true
serdes-ai-streaming.workspace = true
serdes-ai-providers.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
webbrowser.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
