[package]
name = "deskwork-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for Deskwork - Claude-powered coding assistant"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
rusqlite.workspace = true
dirs.workspace = true
serdes-ai.workspace = true
serdes-ai-agent.workspace = true
serdes-ai-core.workspace = true
serdes-ai-models.workspace = true
serdes-ai-tools.workspace = true
serdes-ai-streaming.workspace = true
serdes-ai-providers.workspace = true
serdes-ai-mcp.workspace = true
serdes-ai-toolsets.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
glob.workspace = true
webbrowser.workspace = true
reqwest.workspace = true

# External tools - archive extraction
tar = "0.4"
flate2 = "1"
xz2 = "0.1"
zip = { version = "2.1", default-features = false, features = ["deflate"] }

# External tools - integrity verification
sha2 = "0.10"

# External tools - URL validation
url = "2"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
