[package]
name = "deskwork-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GUI for Deskwork - Claude-powered coding assistant"

[[bin]]
name = "deskwork"
path = "src/main.rs"

[dependencies]
deskwork-core = { path = "../deskwork-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
chrono.workspace = true
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
streamdown-parser = { git = "https://github.com/fed-stew/streamdown-rs", package = "streamdown-parser", rev = "e9aff44364df07de0646cbe0403a158f8cd4ee72" }
